@@ -59,15 +59,14 @@ struct _AgsRecallChannelRunClass
 {
   AgsRecallClass recall;
 
-  void (*run_order_changed)(AgsRecallChannelRun *recall_channel_run, guint nth_run);
+  void (*run_order_changed)(AgsRecallChannelRun *recall_channel_run,
+			    guint nth_run);
 };
 
 GType ags_recall_channel_run_get_type();
 
 void ags_recall_channel_run_run_order_changed(AgsRecallChannelRun *recall_channel_run,
 					      guint run_order);
-
-guint ags_recall_channel_run_get_run_order(AgsRecallChannelRun *recall_channel_run);
 
 AgsRecallChannelRun* ags_recall_channel_run_new();
 
